# gmail-summary-agent

./: .dockerignore  .gitignore  README.md  config.py  config.yaml  dockerfile  gmail.py  gmail_auth.py  main.py  pyproject.toml
docs/: info.txt
docs/deploy/: cf-tunnel-deployment.yaml  n8n-deployment.yaml  n8n-pvc.yaml  n8n-service.yaml
docs/diagrams/: n8n-gcp-cloudflare-solution.drawio
docs/n8n-workflows/: MyGmailSummarizer.json
private_config_template/: .env
